# sportstrack

./: .gitignore  README.md  data_types.py  demo_toolkit.py  do_eval.py  eval_mot.py  main.py  matching.py  mot_configs.py  multi_process_main.py  person_det.py  toolkit.py  track_framework.py  vis_utils.py
TrackEval/trackeval/: eval.py
TrackEval/trackeval/datasets/: mot_challenge_2d_box.py
bot_sort_tracker/: bot_sort.py  gmc.py  matching.py  strack.py
byte_tracker/: byte_tracker.py
deep_reid/: deep_reid.py
dis_tools/: distance.py  eval_geo_model.py  eval_reid_model.py
gmc/: CMakeLists.txt  main.cpp
keypoints/: get_keypoints.py  yolox.py
mfast_reid_t1/: fast_reid.py
persondetsmv2/: yolox.py
postprocess_tools/: 1.py  __init__.py  dir_utils.py  interpolation.py  main.py  main_vis.py  merge_tracks.py  post_process.py  vis_utils.py  visualize.py
sportstracker/: basetrack.py  sports_tracker.py  strack.py
